--- a/docker/osmap.yaml
+++ b/docker/osmap.yaml
@@ -32,7 +32,7 @@ CentOS Stream:
 AlmaLinux:
   pkg:
     deps:
-      - iptables
+      # - iptables
       - python3-dnf-plugin-versionlock
       - python3-docker
     docker:
